// @author EliasDH Team
// @see https://eliasdh.com
// @since 01/01/2025

package SoftwareDesign.Portfolio.Lab02.Code.Relations;

public class FeatureFilm extends Work {
    public FeatureFilm(String title, int runtimeMinutes) {
        super(title, runtimeMinutes);
    }
}